<resources>
    <string name="app_name">Memory Game</string>
    <string name="start_game">Start flipping!</string>
    <string name="settings">Settings</string>
    <string name="level_1">Level 1 (8 cards)</string>
    <string name="level_2">Level 2 (16 cards)</string>
    <string name="level_3">Level 3 (36 cards)</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="save">Save</string>
    <string name="moves">Steps: %1$d</string>
    <string name="you_won">Hooray, you won!</string>
    <string name="go_to_main">Go back</string>
</resources>